# tld_let_calibration

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: deploy.yml
data/interim/: Wyniki_DK_IFJ.xlsx  mc.csv  signal.h5
data/raw/parisi_calibration/: LETd.csv  LETf.csv
notebook/: 0.1-explore-data.ipynb  0.10-ifj-results.ipynb  0.2-detector_signal_and_eff.ipynb  0.3-proton_data.ipynb  0.4-fitting.ipynb  0.5-explore_data_dcpt.ipynb  0.6-ifj-calibration.ipynb  0.6-mc-data.ipynb  0.7-ifj-calibration.ipynb  0.8-calibration_comparison.ipynb  0.9-sck-results.ipynb
