[tool.poetry]
name = "tld-let-calibration"
version = "0.1.0"
description = ""
authors = ["Leszek Grzanka <leszek.grzanka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.1"
pandas = "^2.1.2"
matplotlib = "^3.8.0"
jupyterlab = "^4.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
