[tool.poetry]
name = "tld-let-calibration"
version = "0.1.0"
description = ""
authors = ["Leszek Grzanka <leszek.grzanka@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.2"
matplotlib = "^3.8.0"
jupyterlab = "^4.0.7"
tqdm = "^4.66.1"
openpyxl = "^3.1.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
yapf = "^0.40.2"


[tool.poetry.group.deploy.dependencies]
jupyterlite-core = "^0.2.0"
jupyterlite-pyodide-kernel = "^0.2.0"
ipympl = ">=0.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
